# Human_Detection_OpenCV

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
app/: rectplot.cpp
include/: cam.hpp  cascade.hpp  rectplot.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  rectplottest.cpp
